--- a/src/index.css
+++ b/src/index.css
@@ -14,20 +14,31 @@ body {
   font-family: var(--font-family);
 }
 
-.swiper{
-    width: 100%;
-    max-height: 180px;
+.swiper {
+  width: 100%;
+  max-height: 180px;
   border-radius: 16px;
 }
 
-.swiper-slide img{
+.swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.swiper-pagination-bullet-active{
+.swiper-pagination-bullet-active {
   background: var(--primary-color) !important;
 }
 
+/*
+  * Modified from: PrimeReact
+  */
+.p-password-input {
+  width: 100%;
+}
+
+.p-dialog-title {
+  font-size: 16px !important;
+  font-weight: 600 !important;
+}
