--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 
 body {
   font-family: var(--font-family);
+  background-color: var(--surface-ground);
 }
 
 .swiper {
@@ -41,4 +42,23 @@ body {
 .p-dialog-title {
   font-size: 16px !important;
   font-weight: 600 !important;
+}
+
+.p-inputtext {
+  width: 100%;
+  border-radius: 6px;
+  font-size: 14 px;
+}
+
+/*
+  * Modified from: Custom
+  */
+
+._no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+._no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
