--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+* {
+  -webkit-tap-highlight-color: transparent;
+}
 
 body {
   font-family: var(--font-family);
@@ -62,3 +65,5 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+
