--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@
 }
 
 body {
-  font-family: var(--font-family);
-  background-color: var(--surface-ground);
+  font-family: "DM Sans", sans-serif;
+  background-color: var(--surface-0);
 }
 
 .swiper {
@@ -65,5 +65,3 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-
-
