--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,13 @@ body {
   animation: wobble2 var(--uib-speed) infinite ease-in-out;
 }
 
+.mapboxgl-ctrl-logo {
+  display: none !important;
+}
+.mapboxgl-ctrl {
+  display: none !important;
+}
+
 @keyframes spin78236 {
   0% {
     transform: rotate(0deg);
