--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@
 * {
   -webkit-tap-highlight-color: transparent;
 }
+html,body{
+  height: 100%;
+}
+
+#root{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
 body {
   font-family: "DM Sans", sans-serif;
