--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,19 @@
 html,body{
   height: 100%;
 }
+/*change the scrollbar*/
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #614FE0;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #EFEDFC;
+}
+
 
 #root{
   height: 100%;
