--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,11 @@ html,body{
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #614FE0;
+  background-color: #868687;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #EFEDFC;
+  background-color: #DBDBDB;
 }
 
 
